# pyew-gpui

./: Cargo.toml  README.md
migration/: Cargo.toml
migration/src/: lib.rs  m20250925_000001_create_connection_table.rs  m20250925_000002_create_tab_table.rs  m20250925_000003_create_saved_query_table.rs  m20250925_000004_create_query_history_table.rs  m20250925_000005_create_preference_table.rs  m20250925_000006_create_workspace_table.rs  m20250925_000007_create_database_table.rs
src/: main.rs
src/components/: mod.rs
src/components/connection/: connection.rs  connection_sidebar.rs  connection_window.rs  mod.rs
src/components/editor/: editor.rs
src/components/layouts/: activity_bar.rs  main_panel.rs  mod.rs  sidebar.rs  titlebar.rs
src/entity/: connection.rs  database.rs  database_object.rs  mod.rs  preference.rs  query_history.rs  saved_query.rs  tab.rs  workspace.rs
src/services/: connection.rs  mod.rs  workspace.rs
src/services/connection/: postgres.rs  traits.rs
src/services/database/: mod.rs  mysql.rs  registry.rs  service.rs  sql.rs  sqlite.rs
src/state/: app_state.rs
src/theme/: colors.rs  heights.rs  mod.rs
src/utils/: app_icon.rs  local_data.rs  mod.rs
src/window/: mod.rs  root_window.rs
