[package]
name = "pyew"
description = "PYEW is the Light Weight Database Client built on GPUI for Maximum Performance"
version = "0.1.0"
edition = "2021"

[dependencies]
migration = { path = "./migration" }

gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["wayland", "x11"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component", features = ["tree-sitter-sql"] }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }

anyhow = "1.0"
async-trait = "0.1"
log = "0.4"
tokio = "1.47.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3.1"

uuid = { version = "1.2", features = ["v4", "serde"] }
sea-orm = { version = "2.0.0-rc", features = [
    "sqlx-sqlite",
    "macros",
    "runtime-tokio-native-tls",
    "with-uuid"
] }
sqlx = { version = "0.8.6", features = ["sqlite", "postgres", "mysql", "runtime-tokio-native-tls"] }

chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0.0"
rust-embed = "8.11.0"
