[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.2", features = ["v4", "serde"] }

[dependencies.sea-orm]
version = "2.0.0-rc"
features = [
    "sqlx-sqlite",
    "macros",
    "runtime-tokio-native-tls",
    "with-uuid"
]

[dependencies.sea-orm-migration]
version = "2.0.0-rc"
features = [
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
    "with-uuid"
]
